--- a/app/src/main/res/layout/custom_calendar.xml
+++ b/app/src/main/res/layout/custom_calendar.xml
@@ -81,6 +81,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:id="@+id/gridViewContainer"
             android:layout_weight="6">
 
             <GridView
