Fetched attribute values from XML

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.psx.calendarproject.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.psx.calendarproject.CustomCalendar.CustomCalendarView
+        android:layout_width="match_parent"
+        app:currDateColor="@color/colorPrimaryDark"
+        app:fillUpAllDays="true"
+        android:id="@+id/cal"
+        app:dateDisplayFormt="month_year"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
