Displaying Single Month Dates Correctly.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
         android:layout_height="wrap_content"
         app:currDateColor="@color/colorAccent"
         app:dateDisplayFormt="month_year"
-        app:fillUpAllDays="true" />
+        app:fillUpAllDays="false" />
 
 </LinearLayout>
