--- a/app/src/main/res/layout/custom_calendar_flipper.xml
+++ b/app/src/main/res/layout/custom_calendar_flipper.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="400dp">
 
-</android.support.constraint.ConstraintLayout>
+    <ViewFlipper
+        android:id="@+id/calendar_flipper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.psx.calendarproject.CustomCalendar.CustomCalendarView
+            android:id="@+id/calendar_prev"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.psx.calendarproject.CustomCalendar.CustomCalendarView
+            android:id="@+id/calendar_current"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.psx.calendarproject.CustomCalendar.CustomCalendarView
+            android:id="@+id/calendar_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ViewFlipper>
+
+</LinearLayout>
