--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="FlipperCalendar">
         <attr name="fillUpAllDays" format="boolean" />
-        <attr name="dateDisplayFormt">
+        <attr name="dateDisplayFormat">
             <enum name="month_year" value="1" />
             <enum name="date_month_year" value="2" />
         </attr>
