Added option to restrict the scroll of the Calendar Grid

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         app:dateDisplayFormat = "month_year"
         app:currDateColor = "@color/colorAccent"
         app:fillUpAllDays="false"
+        app:scrollEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
