--- a/app/src/main/res/layout/custom_calendar.xml
+++ b/app/src/main/res/layout/custom_calendar.xml
@@ -88,6 +88,7 @@
                 android:id="@+id/calendar_grid"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scrollbars="none"
                 android:numColumns="7" />
 
         </LinearLayout>
