{feature} Added the option to change months on button click.

--- a/app/src/main/res/layout/custom_calendar.xml
+++ b/app/src/main/res/layout/custom_calendar.xml
@@ -29,12 +29,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/image_next_month"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
+                    android:background="#0000"
                     android:src="@drawable/ic_arrow_right_black_30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -56,12 +57,13 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/image_prev_month"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
+                    android:background="#0000"
                     android:src="@drawable/ic_arrow_left_black_30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
