--- a/app/src/main/res/animator/left_in.xml
+++ b/app/src/main/res/animator/left_in.xml
@@ -1,22 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<set xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <translate
-        android:duration="500"
-        android:fromXDelta="100%p"
-        android:toXDelta="0" />
-
-    <alpha
-        android:duration="500"
-        android:fromAlpha="0.1"
-        android:toAlpha="1.0" />
-
-</set>-->
-
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-android:propertyName="x"
-android:valueType="floatType"
-android:valueFrom="-1500"
-android:valueTo="0"
-android:duration="600"/>
+    android:duration="600"
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+    android:propertyName="x"
+    android:valueFrom="-1500"
+    android:valueTo="0"
+    android:valueType="floatType" />
