--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,10 +6,15 @@
             <enum name="month_year" value="1" />
             <enum name="date_month_year" value="2" />
         </attr>
-        <attr name="nextMonthImage" format="integer" />
-        <attr name="prevMonthImage" format="integer" />
+        <attr name="nextMonthImage" format="reference" />
+        <attr name="prevMonthImage" format="reference" />
         <attr name="showSeasonalColorsOnMonths" format="boolean" />
         <attr name="currDateColor" format="reference" />
         <attr name="scrollEnabled" format="boolean" />
+        <attr name="animateChange" format="boolean" />
+        <attr name="animLeftIn" format="reference" />
+        <attr name="animLeftOut" format="reference" />
+        <attr name="animRightIn" format="reference" />
+        <attr name="animRightOut" format="reference" />
     </declare-styleable>
 </resources>
