--- a/enhancedcalendar/src/main/res/layout/cutsom_calendar_day.xml
+++ b/enhancedcalendar/src/main/res/layout/cutsom_calendar_day.xml
@@ -32,12 +32,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/special_day_image"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_gravity="center"
             android:layout_marginTop="0dp"
             android:layout_weight="1"
             android:padding="0dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_star_blue_24dp" />
 
     </LinearLayout>
