{Feat} added option to change the highlight color of current date

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/flip_cal"
         app:dateDisplayFormat = "month_year"
-        app:currDateColor = "@color/colorAccent"
         app:fillUpAllDays="false"
         app:scrollEnabled="false"
         app:animateChange="true"
@@ -20,7 +19,7 @@
         app:animLeftOut="@animator/left_out"
         app:animRightIn="@animator/right_in"
         app:animRightOut="@animator/right_out"
-        app:specialDayDecorator="both"
+        app:specialDayDecorator="markerImager"
         app:specialDayBackground="@color/colorAccent"
         app:specialDayMarkerImage="@drawable/ic_launcher_background"
         android:layout_width="match_parent"
